--- a/src/scss/4.components/index/_steps.scss
+++ b/src/scss/4.components/index/_steps.scss
@@ -24,6 +24,7 @@
   }
 
   &__number {
+    font-weight: bold;
     font-family: $font-family-titles;
     float: left;
     line-height: 2;
